Backend - Fix controller route order, CORS annotation conflict, and spatial query null filter handling (16/16 APIs 100% HEALTHY)